--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,29 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "runtime": "python3.9",
+                "requirementsPath": "vercel_requirements.txt"
+            }
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
             "src": "/(.*)",
-            "dest": "api/index.py"
+            "dest": "/api/index.py"
         }
     ],
     "env": {
-        "VERCEL_ENV": "production"
+        "VERCEL_ENV": "production",
+        "PYTHONPATH": "."
     }
 } 
