--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
             "src": "api/index.py",
             "use": "@vercel/python",
             "config": {
-                "runtime": "python3.9",
-                "requirementsPath": "vercel_requirements.txt"
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
             }
         },
         {
