--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/index.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
-            }
-        },
-        {
-            "src": "static/**",
-            "use": "@vercel/static"
+            "src": "api/test.py",
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/api/index.py"
+            "dest": "/api/test.py"
         }
-    ],
-    "env": {
-        "VERCEL_ENV": "production",
-        "PYTHONPATH": "."
-    }
+    ]
 } 
