--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,1 +1,7 @@
 # No external dependencies needed for the test endpoint 
+Flask==3.0.2
+Werkzeug==3.0.1
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+click==8.1.7
+itsdangerous==2.1.2 
