--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/test.py",
+            "src": "api/index.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/api/test.py"
+            "dest": "/api/index.py"
         }
     ]
 } 
