--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,4 +4,7 @@ Werkzeug==3.0.1
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 click==8.1.7
-itsdangerous==2.1.2 
+itsdangerous==2.1.2
+notion-client==2.2.1
+python-dotenv==1.0.1
+markdown2==2.4.12 
