--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,21 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/index.py",
-            "use": "@vercel/python"
-        },
-        {
-            "src": "static/**",
-            "use": "@vercel/static"
+            "src": "api/vercel.py",
+            "use": "@vercel/python",
+            "config": { 
+                "maxLambdaSize": "10mb",
+                "runtime": "python3.9"
+            }
         }
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/api/index.py"
+            "dest": "/api/vercel.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHONPATH": "/var/task"
+    }
 } 
