feat: Add Railway deployment configuration
- Add Procfile with gunicorn start command
- Add runtime.txt specifying Python 3.11.9
- Add railway.json configuration
- Update requirements.txt with gunicorn
- Update blog_app.py for production environment detection
- Add .env.example template for environment variables
- Update .gitignore to exclude sensitive files and backups
- Add comprehensive Railway deployment guides

--- a/.gitignore
+++ b/.gitignore
@@ -35,19 +35,29 @@ env/
 *.db
 *.sqlite3
 
-# Environment variables
+# Environment variables (IMPORTANTE: non committare mai!)
 .env
-Config_Notion.env
 *.env
+Config_Email.env
+Config_Notion.env
 
 # Logs
 *.log
 
 # System Files
 .DS_Store
-Thumbs.db 
+Thumbs.db
 .vercel
 
-# Environment variables
-Config_Email.env
-Config_Notion.env
+# Backups (troppo grandi per Git)
+backups/
+
+# Node modules (se presenti)
+node_modules/
+package-lock.json
+
+# File sensibili
+*secret*
+*password*
+credentials.json
+token.json
