Switch from SMTP to Resend API for email delivery
- Added resend library to requirements.txt
- Created send_email_resend() helper function
- Updated comment notifications to use Resend
- Updated download notifications to use Resend
- No more SMTP port blocking issues
- Works perfectly on Railway

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ Werkzeug==3.0.1
 # Flask Extensions
 Flask-Mail==0.9.1
 
+# Email Service
+resend==0.8.0
+
 # Notion Integration
 notion-client==2.2.1
 
