--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
+[providers]
+nodejs = false
+
 [phases.setup]
-nixPkgs = ["python311"]
+nixPkgs = ["python311", "pip"]
 
 [phases.install]
-cmds = ["python -m pip install -r requirements.txt"]
+cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
 
 [start]
 cmd = "gunicorn --timeout 120 blog_app:app"
